# Awen

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  README_CN.md  SECURITY.md  install-remote.sh  install.sh
.github/workflows/: ci.yml  release.yml
docs/: MANUAL_TEST.md  RELEASE_CHECKLIST.md  adr.md
packaging/brew/: awen.rb.template
plugin/: awen-communicate.zsh  awen-interact.zsh  awen-render.zsh  awen-source.zsh  awen-utils.zsh  awen.zsh
specs/: act.toml  antigravity.toml  awk.toml  aws.toml  az.toml  bat.toml  black.toml  brew.toml  bun.toml  bundle.toml  cargo.toml  cat.toml  chmod.toml  chown.toml  claude.toml  cmake.toml  codex.toml  composer.toml  conda.toml  cp.toml  crontab.toml  curl.toml  cut.toml  date.toml  delta.toml  deno.toml  df.toml  diff.toml  dig.toml  docker.toml  dotnet.toml  du.toml  duf.toml  dust.toml  echo.toml  env.toml  eslint.toml  eza.toml  fd.toml  file.toml  (+103 more)
src/: arbitrator.rs  config.rs  daemon.rs  lib.rs  main.rs  pipeline.rs  protocol.rs  sanitize.rs
src/context/: git.rs  mod.rs  repo.rs  session.rs
src/layer/: ai.rs  failure.rs  filesystem.rs  history.rs  history_import.rs  mod.rs  risk.rs  specs.rs
tests/: e2e.rs  zsh_smoke_test.zsh
