[package]
name = "awen"
version = "0.1.0"
edition = "2024"
description = "Terminal Intelligence Layer — Smart when you need it. Silent when you don't."
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
nucleo-matcher = "0.3"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
strsim = "0.11"
libc = "0.2"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
